tests/type-error/classes/Generalisation.vix
class Functor f where
  map : forall a b. (a -> b) -> f a -> f b

test : forall (f : type -> type) a. f a -> f int
test = map (\_. 610)
